SERVER-14984 Server aborts when running $centerSphere query with NaN radius